# equipment-inventory-manager

./: pyproject.toml
equipment_inventory/: equipment.py  main.py  manager.py
