[tool.poetry]
name = "equipment-inventory"
version = "0.1.0"
description = ""
authors = ["Никита Малышев <babyswisha@mail.ru>"]
readme = "README.md"
packages = [{include = "equipment_inventory"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
